# falcon512-stm32

./: .gitignore  Cargo.toml  KEYGEN_WORKFLOW.md  QUICK_START.md  README.md
falcon-rust/: Cargo.toml
falcon-rust/src/: cyclotomic_fourier.rs  encoding.rs  falcon.rs  falcon1024.rs  falcon512.rs  falcon_field.rs  fast_fft.rs  ffsampling.rs  inverse.rs  lib.rs  math.rs  polynomial.rs  samplerz.rs  u32_field.rs  workspace.rs
falcon-rust/tests/: cross_implementation_test.rs  external_cross_validation.rs  external_verification_test.rs  falcon512_memory_test.rs  falcon512_nostd_test.rs  falcon512_performance_test.rs  falcon512_tests.rs
falcon-wasm/: Cargo.toml
falcon-wasm/src/: lib.rs
flash_keys/: Cargo.toml
flash_keys/src/: main.rs
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/src/: 1inch-limit-order.json  App.css  App.tsx  index.css
frontend/src/components/: DeveloperPanel.tsx  ERC7730MessageBuilder.tsx  FalconSignaturePanel.tsx  HashAndSignPanel.tsx  MessageBuilder.tsx  STM32SignaturePanel.tsx  UsbConnectionPanel.tsx
frontend/src/lib/: eip712.ts  falcon.ts  usbTransport.ts
frontend/src/types/: serial.d.ts
keygen/: Cargo.toml
keygen/src/: main.rs
stm32/: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
stm32/.cargo/: config.toml
stm32/src/: keys.rs  main.rs  signing.rs  usb.rs
usb-client/: Cargo.toml
usb-client/src/: main.rs
