[workspace]
members = [
    "falcon-rust",
    "stm32",
    "keygen",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
strip = "symbols"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.test]
opt-level = 1
panic = "abort"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
