[workspace]
members = [
    "falcon-rust",
    "keygen",
    "usb-client",
]
# Exclude frontend (TypeScript) and stm32 (embedded target) from default workspace
exclude = [
    "frontend",
    "stm32",
]
resolver = "2"

# Default members for cargo test - only include crates that can run tests on host
default-members = [
    "falcon-rust",
    "keygen",
    "usb-client",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
strip = "symbols"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.test]
opt-level = 1
panic = "abort"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
