[package]
name = "falcon-wasm"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
falcon-rust = { path = "../falcon-rust" }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand_core = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Crypto",
  "SubtleCrypto",
]