[package]
name = "falcon512-stm32"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Falcon signature library
falcon-rust = { path = "../falcon-rust", default-features = false }

# Embedded runtime
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# Memory allocator for embedded systems
embedded-alloc = "0.5"

# Panic handler and debug output
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = "0.5"

# Random number generation (using ChaCha20 for deterministic testing)
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

# STM32H7 HAL for GPIO control
stm32h7xx-hal = { version = "0.16", features = ["stm32h743v", "rt"] }

